package core;

import core.controller.Game;

public class App
{
    public static void main(String[] args)
    {
        new Game();
    }
}