package core.model;

import java.awt.*;

public class Constants
{
    public static final String WINDOW_TITLE = "\"Only kings play KingDomino\"";
    public static final int WIDTH_KINGDOM_NORMAL = 5;
    public static final int HEIGHT_KINGDOM_NORMAL = 5;
    public static final String FLIP_LEFT = "↶";
    public static final String FLIP_RIGHT = "↷";
    public static final String FLIP_180 = "\uD83D\uDDD8";
    public static final int KINGDOM_PADDING = 12;
    public static final Color KINGDOM_COLOR_MISSING_TILE = Color.WHITE;
    public static final String CROWN_SYMBOL = "\uD83D\uDC51";
}