package core_mvc.model;

public class Castle extends Tile
{
    public Castle()
    {
        super(Biome.CASTLE, 0);
    }
}
