@startuml

title __A31-KINGDOMINO's Class Diagram__\n

  namespace core {
    class core.App {
    }
  }
  

  namespace core {
    enum Biome {
    }
  }
  

  namespace core {
    class core.Board {
    }
  }
  

  namespace core {
    class core.Castle {
    }
  }
  

  namespace core {
    class core.Constants {
    }
  }
  

  namespace core {
    class core.Domino {
    }
  }
  

  namespace core {
    class core.Duo {
    }
  }
  

  namespace core {
    abstract class core.GameMode {
    }
  }
  

  namespace core {
    interface core.IObserver {
    }
  }
  

  namespace core {
    class core.Kingdom {
    }
  }
  

  namespace core {
    class core.KingdomObserver {
    }
  }
  

  namespace core {
    abstract class core.Observable {
    }
  }
  

  namespace core {
    class core.ParametersGUI {
    }
  }
  

  namespace core {
    class core.Player {
    }
  }
  

  namespace core {
    class core.Quatuor {
    }
  }
  

  namespace core {
    class core.ReaderCSV {
    }
  }
  

  namespace core {
    class core.Tile {
    }
  }
  

  namespace core {
    class core.Trio {
    }
  }
  

  namespace core {
    class core.Wallet {
    }
  }
  

  namespace core {
    class core.WalletObserver {
    }
  }
  

  core.Board -up-|> javax.swing.JFrame
  core.Board o-- core.Domino : selectedDomino
  core.Castle -up-|> core.Tile
  core.Duo -up-|> core.GameMode
  core.GameMode o-- core.Board : board
  core.GameMode o-- core.ReaderCSV : reader
  core.GameMode o-- core.Wallet : wallet
  core.Kingdom -up-|> core.Observable
  core.KingdomObserver .up.|> core.IObserver
  core.KingdomObserver -up-|> javax.swing.JFrame
  core.ParametersGUI -up-|> javax.swing.JFrame
  core.Player o-- core.Kingdom : kingdom
  core.Quatuor -up-|> core.GameMode
  core.Tile o-- core.Biome : biome
  core.Trio -up-|> core.GameMode
  core.Wallet -up-|> core.Observable
  core.WalletObserver .up.|> core.IObserver
  core.WalletObserver -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
